# heavy-oil-rheology-ml

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Heavy_Oil_Rheology_ML_.ipynb  Heavy_Oil_Tables_.ipynb  LICENSE  README.md  metrics visualization & comparison  ml_pipeline_architecture.html  pyproject.toml  requirements.txt  setup.py
aurelia/: __init__.py  data.py  experiment.py  models.py
docs/: README.md  architecture.md  gap-analysis.md  getting_started.md  historical-status.md  index.md  installation.md  project-vision.md  sprint-planning.md  user_guide.md
docs/changelog/: 2025-04-18-changelog.md  README.md
docs/gap-analysis/: README.md
docs/project-status/: README.md
docs/project-vision/: README.md
docs/roadmap/: 2025-04-18-product-roadmap.md  README.md
docs/sprint-planning/: README.md
docs/technical/: 2025-04-18-device-compatibility.md  2025-04-20-web-mvp-architecture.md  README.md  device-compatibility-guide.md
heavy_oil_ml/: __init__.py  data_preparation.py  pipeline.py  visualization.py
notebooks/: 01_data_preparation.ipynb
src/: model.py  train_config.yaml  train_model.py
