[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heavy_oil_ml"
version = "0.1.0"
description = "Machine learning pipeline for analyzing heavy oil rheological properties"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Falade, A.A.", email = "falade.research@example.com"},
    {name = "Sa'id, O.", email = "said.research@example.com"},
    {name = "Akinsete, O.O.", email = "akinsete.research@example.com"}
]
keywords = ["machine-learning", "petroleum-engineering", "rheology", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=0.24.0",
    "shap>=0.39.0"
]

[project.urls]
Homepage = "https://github.com/ol-s-cloud/heavy-oil-rheology-ml"
Repository = "https://github.com/ol-s-cloud/heavy-oil-rheology-ml"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]